--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -1,6 +1,28 @@
+*
+	margin: 0
+	padding: 0
+	font-family: 'Roboto', sans-serif
+
 html,
 body
-	margin: 0
-	width: 100%
 	height: 100%
+	width: 100%
+	box-sizing: border-box
 
+body
+	justify-self: center
+	padding: 1.5rem
+	background-color: #ECECEC
+	width: 1440px
+	display: grid
+	grid-template-columns: repeat(12, 1fr)
+	grid-template-rows: 1.5rem repeat(15, 1fr)
+
+main
+	margin-top: 1.5rem
+	grid-column: 3 / -1
+	grid-row: 2 / -1
+
+.nav-title
+	font-size: 1.625rem
+	font-weight: 700
